--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  overflow-x: hidden;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   background-color: white;
-  overscroll-behavior-y: none;
+  width: 100%;
+  height: 100%;
 }
 
 hr {
@@ -16,17 +24,23 @@ hr {
 
 #banner {
   width: 100%;
-  height: 500px;
+  height: 100%;
   background: linear-gradient(
       rgba(255, 255, 255, 0.3),
       rgba(255, 255, 255, 0.3)
     ),
-    url("../img/nigiri.jpg") no-repeat center fixed;
+    url("../img/nigiri.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  box-shadow: 10px 1px 1px #000;
+  box-shadow: 10px 10px 10px #000;
+}
+
+.logo-main {
+  /* width: 45rem; */
+  max-width: 100%;
+  height: auto;
 }
 
 .nopadding {
@@ -38,19 +52,17 @@ hr {
   min-width: 100%;
   height: 500px;
   background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-    url("../img/omakase.png") no-repeat center fixed;
+    url("../img/omakase.png") no-repeat center left fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  box-shadow: 10px 10px 10px #000;
 }
 
-.logo-main {
-  /* width: 45rem; */
-  max-width: 100%;
-  height: auto;
+#about > img {
+  width: 100%;
 }
-
 /* Media query */
 @media (min-width: 576px) {
   #intro {
